Fix overflowing text on mobile

--- a/static/tailwind.css
+++ b/static/tailwind.css
@@ -7,7 +7,7 @@ body {
 }
 
 p a {
-  text-decoration: underline
+  @apply break-words underline
 }
 
 .posts {
